[package]
name = "lever-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lever-core = { path = "../lever-core" }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
dotenvy = "0.15.7"
actix-web = "4"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
futures = "0.3"
env_logger = "0.10.0"
