[package]
name = "lever-client"
version = "0.1.0"
edition = "2021"

[dependencies]
lever-core = { path = "../lever-core" }
gloo-net = { version = "0.4.0", features = ["json"] }
leptos = { version = "0.4.8", features = ["csr"] }
leptos_router = { version = "0.4.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
